# Obsidium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FAVICON_SETUP.md  LICENSE  README.md  server.properties  test_protocol.sh
.github/workflows/: checks.yml  release.yml
src/: client.rs  error.rs  favicon.rs  lib.rs  logger.rs  main.rs
src/config/: mod.rs  properties.rs  server.rs
src/game/: mod.rs  player.rs
src/game/entity/: mod.rs  player.rs
src/game/world/: chunk.rs  mod.rs  registry.rs
src/network/: codec.rs  connection.rs  listener.rs  mod.rs
src/protocol/: compression.rs  handshake.rs  login.rs  mod.rs  packet.rs  play.rs  state.rs  status.rs  types.rs  varint.rs
src/protocol/packets/: configuration.rs  handshaking.rs  login.rs  mod.rs  play.rs  status.rs
src/server/: minecraft.rs  mod.rs
