[package]
name = "obsidiuim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
tracing-core = "0.1.34"
time = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1.0"
