[package]
name = "obsidiuim"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OmarAfet/obsidiuim"
description = "A high-performance Minecraft server implementation written in Rust."
license = "MIT"
authors = ["Omar Afet"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
tracing-core = "0.1.34"
time = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1.0"
